PharmaDemo/src/objects/Sample_Item__c.object
<CustomObject>
    <fields>
        <fullName>Call_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipLabel>Sample Items</relationshipLabel>
        <relationshipName>Sample_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sample Items</relationshipLabel>
        <relationshipName>Sample_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Date Given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample__c</fullName>
        <label>Sample</label>
        <referenceTo>Sample__c</referenceTo>
        <relationshipLabel>Sample Items</relationshipLabel>
        <relationshipName>R00Nj0000003oDL0EAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Cost__c *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  Call_Report__r.Id , IMAGE(&quot;/img/icon/tasks16.gif&quot; ,&quot;View&quot;) ,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Sample Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Sample Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>